code highlighting updates

--- a/_posts/user_guide_r/2015-05-28-user-guide.html
+++ b/_posts/user_guide_r/2015-05-28-user-guide.html
@@ -57,7 +57,7 @@ has_thumbnail: false
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>
-<a href="https://plot.ly/r">
+<a href="/r/">
 <img src="http://i.imgur.com/MM7xEJf.png" title="R"/>
 </a>
 </p>
