title fix - getting started pages

--- a/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
+++ b/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
@@ -1,4 +1,5 @@
 ---
+title: Getting Started Plotly for ggplot2
 name: Getting Started Plotly for ggplot2
 permalink: ggplot2/getting-started/
 description: Plotly's ggplot2 graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
