--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -1,5 +1,6 @@
 ---
-name:  Getting Started Plotly for MATLAB
+title: Getting Started Plotly for MATLAB
+name: Getting Started Plotly for MATLAB
 permalink: matlab/getting-started/
 description: Getting Started with Plotly for MATLAB.
 layout: getstart
