--- a/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
+++ b/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
@@ -1,4 +1,5 @@
 ---
+title: Getting Started Plotly for Julia
 name: Getting Started Plotly for Julia
 permalink: julia/getting-started/
 description: Plotly's Julia graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
