clean up getting started sections

--- a/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
+++ b/_posts/ggplot2/getting-started/2015-05-25-getting-started_ggplot2_index.html
@@ -7,9 +7,8 @@ layout: getstart
 language: ggplot2
 ---
 
-<h1>Getting started: Plotly for ggplot2</h1>
+<h1>Getting started: Plotly with ggplot2</h1>
 
-<!-- ****************** PYTHON ****************** -->
     <section class="section">
         <h2 >Installation</h2>
         <div  class="content-box">
@@ -58,41 +57,26 @@ Loading required package: ggplot2</code></pre>
         <h2 >Authentication</h2>
         <div class="content-box">
             <p >
-                Set your Plotly user credentials!
+                Set your Plotly user credentials.
             </p>
-
-
-                <p >
-                    You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and API-key.
-                </p>
-
 
             <pre><code>set_credentials_file("DemoAccount", "lr1c37zw81")</code></pre>
 
             <p >
-                You only have to set this up if it's your first time using a Plotly API!
+                You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and <a href="https://plot.ly/settings/api/">API key</a>.
             </p>
 
+            <p >
+                <a href="https://plot.ly/settings/api/" target="_blank">Find my API key.</a>
+            </p>
 
-                <p >Don't know your API key? If you don't have an account, you will be prompted to sign up.
-                    <div>
-                        <a href="https://plot.ly/settings/api" target="blank" class="button no_underline">Display Key</a>
+            <p >
+                You only have to set this up if it's your first time using a Plotly API.
+            </p>
 
+            <br>
 
-                    </div>
-                </p>
-				<br><h6>Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
-				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-				<br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
-
-				<br><p>In your Terminal, enter:<p>
-				<pre><code class="terminal">
-$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
-				</code></pre>
-
-
-
+            {% include r-enterprise-config.html %}
 
         </div>
     </section>
@@ -129,6 +113,8 @@ ggiris
         </div>
     </section>
 
-<div class="row centered btnrow">	
+    {% include credentials.html %}
+
+<div class="row centered btnrow">
 	<a href="/ggplot2/" class="button no_underline">view examples</a><br>
 </div>
