--- a/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
+++ b/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
@@ -7,13 +7,13 @@ layout: getstart
 language: julia
 ---
 
-<h1>Getting started:</span> Plotly for Julia</h1>
+<h1>Getting started: Plotly for Julia</h1>
 
     <section class="section">
         <h2 >Installation</h2>
         <div class="content-box">
             <p >
-                Install using Julia's <code class="no-padding">Pkg</code> module. From the Julia REPL, do:
+                Install using Julia's <code class="no-padding">Pkg</code> module. From the Julia REPL:
             </p>
 
             <pre><code>Pkg.clone("https://github.com/plotly/Plotly.jl")</code></pre>
@@ -34,49 +34,47 @@ language: julia
     <section class="section">
         <h2 >Authentication</h2>
         <div class="content-box">
-            <p >
-                Sign in to your Plotly Julia library account.
-            </p>
-
-                <p >
-                    You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and API-key.
-                </p>
-
-
-            <pre><code>Plotly.signin("DemoAccount", "lr1c37zw81")</code></pre>
-
-            <p >Julia will return:</p>
-
-            <pre><code>PlotlyAccount("DemoAccount", "lr1c37zw81")</code></pre>
 
             <p >
-                If you don't have an account yet you can sign up using <a class="link--bold link--impt js--api-signup-link">Plotly's online GUI</a>.
+                Next, set your Plotly user credentials.
             </p>
-
-                <p >Don't know your API key?
-                    <div>
-                        <a href="https://plot.ly/settings/api" target="blank" class="button no_underline" id="display_key">Display Key</a>
-
-
-                    </div>
-                </p>
-            <br><h6>Special Instructions for <a  class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
-			<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-			<br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
-
-			<p>In your Terminal, enter:<p>
-			<pre><code class="terminal">
-$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
-			</code></pre>
 
             <p >
                It is also possible to save your user credentials for future Julia sessions. In your Julia terminal, enter:
-                <pre><code>
-Plotly.set_credentials_file({"username"=>"DemoAccount","api_key"=>"lr1c37zw81"})</code></pre>
+                <pre><code>Plotly.set_credentials_file({"username"=>"DemoAccount","api_key"=>"lr1c37zw81"})</code></pre>
             </p>
 
+            <p >
+                You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and <a href="https://plot.ly/settings/api/" target="_blank">API key</a>.
+            </p>
 
+            <p >
+                <a href="https://plot.ly/settings/api/" target="_blank">Find my API key.</a>
+            </p>
+
+            <p >
+                You only have to set this up if it's your first time using a Plotly API.
+            </p>
+
+            <h6>
+                Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users
+            </h6>
+
+            <p>
+                If your company has a Plotly On-Premise server, change the API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.
+            </p>
+
+            <p>In your Julia console, enter:<p>
+
+            <br>
+
+            <pre><code class="julia">Plotly.set_config_file({"plotly_domain"=>"https://plotly.your-company.com", "plotly_api_domain"=>"https://api-plotly.your-company.com"})</code></pre>
+
+            <br>
+
+            <p>
+                Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? <a href="mailto:support@plot.ly">support@plot.ly</a></b>
+            </p>
 
         </div>
     </section>
@@ -88,9 +86,19 @@ Plotly.set_credentials_file({"username"=>"DemoAccount","api_key"=>"lr1c37zw81"})
                 Now you can make a simple API call using <code class="no-padding">Plotly.plot()</code>, and create your first graph!
             </p>
 
-            <pre><code>x = [0,1,2,3,4]
-y = [0,3,2,4,5]
-Plotly.plot([x y])</code></pre>
+            <pre><code>trace1 = [
+  "x" => [1, 2, 3, 4],
+  "y" => [10, 15, 13, 17],
+  "type" => "scatter"
+]
+trace2 = [
+  "x" => [1, 2, 3, 4],
+  "y" => [16, 5, 11, 9],
+  "type" => "scatter"
+]
+
+response = Plotly.plot([trace1, trace2], ["filename" => "basic-line", "fileopt" => "overwrite"])
+plot_url = response["url"]</code></pre>
         </div>
     </section>
 
@@ -108,6 +116,8 @@ Plotly.plot([x y])</code></pre>
 "warning"=>""]</code></pre>
         </div>
     </section>
+
+{% include credentials.html %}
 
 <div class="row centered btnrow">
 	<a href="/julia/" class="button no_underline">VIEW EXAMPLES</a><br>
