--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -24,32 +24,49 @@ language: matlab
             <p >
                 In your MATLAB console, begin by locating the downloaded directory, and running <code class="no-padding">plotlysetup()</code>.
             </p>
-            <p >
-
-            </p>
 
             <pre><code>>> cd ~/Downloads/MATLAB-api-master
 >> plotlysetup('DemoAccount', 'lr1c37zw81')</code></pre>
 
             <p >
-                This will set up your credentials and import the Plotly library into your MATLAB toolboxes. You can now delete the downloaded folder!
+                You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and <a href="https://plot.ly/settings/api/" target="_blank">API key</a>.
             </p>
-			<div>
-			<a class="button no_underline" href="https://plot.ly/settings/api" target="blank">DISPLAY KEY</a>
-			</div>
-			<br>
-				<h6>Special Instructions for <a class="no_underline" href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
-				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-				<br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
 
-				<p>In your Terminal, enter:<p>
-				<pre><code class="terminal">
-$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
-				</code></pre>
+            <p >
+                <a href="https://plot.ly/settings/api/" target="_blank">Find my API key.</a>
+            </p>
 
+            <p >
+                You only have to set this up if it's your first time using a Plotly API.
+            </p>
 
+            <p >
+                This will set up your credentials and import the Plotly library into your MATLAB toolboxes. You can now delete the downloaded folder.
+            </p>
 
+            <br>
+
+            <h6>
+                Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users
+            </h6>
+
+            Your API key for account on the public cloud will be different than the API key in Plotly On-Premise. Visit https://plotly.your-company.com/settings/api/ to find your Plotly On-Premise API key. Remember to replace "your-company.com" with the URL of your Plotly On-Premise server.
+
+            <p>
+                If your company has a Plotly On-Premise server, change the API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.
+            </p>
+
+            <p>In your MATLAB console, enter:<p>
+
+            <br>
+
+            <pre><code class="MATLAB">>> saveplotlyconfig('https://plotly.your-company.com', 'plotly.your-company.com')</code></pre>
+
+            <br>
+
+            <p>
+                Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? <a href="mailto:support@plot.ly">support@plot.ly</a></b>
+            </p>
 
             <p >
                 Plotly's MATLAB package is updated frequently! To update to the latest version, simply run:
@@ -92,33 +109,7 @@ error: [1x0 char]</code></pre>
         </div>
     </section>
 
-<!-- ****************** JULIA ****************** -->
-
-
-
-
-    <section class="section">
-        <h2 >Credentials</h2>
-        <div class="content-box">
-            <p >
-                The initialization step places a special
-                <strong>.plotly/.credentials</strong> file in your home
-                directory. Your <strong>~/.plotly/.credentials</strong> file
-                should look something like this:
-            </p>
-            <pre><code>
-{
-    "username": "DemoAccount",
-    "stream_ids": ["ylosqsyet5", "h2ct8btk1s", "oxz4fm883b"],
-    "api_key": "lr1c37zw81"
-}
-            </code></pre>
-            <p >
-                You can change the contents of this file manually or as
-                described in the <strong>Initialization</strong> section.
-            </p>
-        </div>
-    </section>
+    {% include credentials.html %}
 
 <div class="row centered btnrow">
 	<a href="/matlab/" class="button no_underline">view examples</a><br>
