--- a/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
+++ b/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
@@ -30,34 +30,35 @@ language: nodejs
 
             <pre><code>$ node</code></pre>
 
-
-                <p >
-                    You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and API-key.
-                </p>
-
-
             <pre><code>var plotly = require('plotly')("DemoAccount", "lr1c37zw81")</code></pre>
 
+            <p >
+                You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and <a href="https://plot.ly/settings/api/">API key</a>.
+            </p>
 
-                <p >Don't know your API key? If you don't have an account, you will be prompted to sign up.
-                    <div >
-                        <a class="button no_underline" href="https://plot.ly/settings/api" target="blank">Display Key</a>
+            <p >
+                <a href="https://plot.ly/settings/api/" target="_blank">Find my API key.</a>
+            </p>
 
+			<br>
 
-                    </div>
+            <h6>
+                Special Instructions for <a class="no_underline" href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users
+            </h6>
 
-                </p>
+            <p>
+                Your API key for account on the public cloud will be different than the API key in Plotly On-Premise. Visit <a href="https://plotly.your-company.com/settings/api/" target="_blank">https://plotly.your-company.com/settings/api/</a> to find your Plotly On-Premise API key. Remember to replace "your-company.com" with the URL of your Plotly On-Premise server.
+            </p>
 
-				<br><h6>Special Instructions for <a class="no_underline" href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
-				<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-				<br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
+            <p>
+                Instantiate your <code>plotly</code> object with the domain of your Plotly On-Premise server.
+            </p>
 
-				<br><p>In your Terminal, enter:<p>
-				<pre><code class="terminal">
-$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
-				</code></pre>
+            <pre><code>var plotly = require('plotly')({"username": "DemoAccount", "apiKey": "lr1c37zw81", "host": "plotly.your-company.com", "port": 443})</code></pre>
 
+            <p>
+                 Remember to replace "your-company.com" with the URL of your Plotly On-Premise server. Questions? <a href="mailto:support@plot.ly">support@plot.ly</a>
+            </p>
         </div>
     </section>
 
@@ -79,7 +80,7 @@ plotly.plot(data, layout, function (err, msg) {
 
         </div>
     </section>
-	
+
 <div class="row centered btnrow">
 	<a href="/nodejs/" class="button no_underline">view examples</a>
 </div><br>
