--- a/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
+++ b/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
@@ -7,13 +7,7 @@ layout: getstart
 language: r
 ---
 
-        <h1>Getting started: Plotly for R</h1>
-
-
-
-<!-- ****************** PYTHON ****************** -->
-
-
+<h1>Getting started: Plotly for R</h1>
 
     <section class="section">
         <h2 >Installation</h2>
@@ -57,34 +51,26 @@ Loading required package: ggplot2</code></pre>
 
             <br>
             <p >
-                Next, set your Plotly user credentials!
+                Next, set your Plotly user credentials.
             </p>
-			<p>
-                    You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and API-key.
-             </p>
-
 
             <pre><code>set_credentials_file("DemoAccount", "lr1c37zw81")</code></pre>
 
             <p >
-                You only have to set this up if it's your first time using a Plotly API!
+                You'll need to replace <code class="no-padding">"DemoAccount"</code> and <code class="no-padding">"lr1c37zw81"</code> with your Plotly username and <a href="https://plot.ly/settings/api/" target="_blank">API key</a>.
             </p>
 
-            <p>Don't know your API key? If you don't have an account, you will be prompted to sign up.
-                    <div >
-                        <a href="https://plot.ly/settings/api" target="blank" class="button no_underline">Display Key</a>
-                    </div>
-             </p>
+            <p >
+                <a href="https://plot.ly/settings/api/" target="_blank">Find my API key.</a>
+            </p>
 
-            <br><h6>Special Instructions for <a class="no_underline"  href="https://plot.ly/product/enterprise/">Plotly On-Premise</a> users</h6>
-			<p>If your company has a Plotly On-Premise server, change the Python API endpoint so that it points to your company's Plotly server instead of Plotly's cloud.</p>
-			<br><p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<b>Questions? Email support@plot.ly</b></p>
+            <p >
+                You only have to set this up if it's your first time using a Plotly API.
+            </p>
 
-			<p>In your Terminal, enter:<p>
-			<br><pre><code class="terminal">
-$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
-plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
-			</code></code></pre>
+            <br>
+
+            {% include r-enterprise-config.html %}
 
         </div>
     </section>
@@ -104,56 +90,33 @@ plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='htt
 
 
             <pre><code>trace0 &lt;- list(
-x = c(1, 2, 3, 4),
-y = c(10, 15, 13, 17)
+    x = c(1, 2, 3, 4),
+    y = c(10, 15, 13, 17)
 )
 trace1 &lt;- list(
-x = c(1, 2, 3, 4),
-y = c(16, 5, 11, 9)
+    x = c(1, 2, 3, 4),
+    y = c(16, 5, 11, 9)
 )
 response &lt;- py$plotly(trace0, trace1, kwargs=list(filename="basic-line", fileopt="overwrite"))</code></pre>
 
 
             <p >
-                Your online, interactive, collaborative plot lives at this URL:
+                Visit your graph at this URL:
             </p>
 
             <pre><code>response$url</code></pre>
 
-            <p >
-                Do you use ggplot2? See some ggplot2 examples in our <a class="link--bold link--impt" href="{{ site.baseurl }}/ggplot2">ggplot2 documentation</a>.
-            </p>
+            <br>
+            <h6>Alternatively, use ggplot2 syntax with <code>ggplotly</code></h6>
+
+            <pre><code>ggiris &lt;- qplot(Petal.Width, Sepal.Length, data = iris, color = Species)
+response &lt;- py$ggplotly(ggiris)
+</code></pre>
 
         </div>
     </section>
 
-<!-- ****************** NODE.JS ****************** -->
-
-
-
-
-    <section class="section">
-        <h2 >Credentials</h2>
-        <div class="content-box">
-            <p >
-                The initialization step places a special
-                <strong>.plotly/.credentials</strong> file in your home
-                directory. Your <strong>~/.plotly/.credentials</strong> file
-                should look something like this:
-            </p>
-            <pre><code>
-{
-    "username": "DemoAccount",
-    "stream_ids": ["ylosqsyet5", "h2ct8btk1s", "oxz4fm883b"],
-    "api_key": "lr1c37zw81"
-}
-            </code></pre>
-            <p >
-                You can change the contents of this file manually or as
-                described in the <strong>Initialization</strong> section.
-            </p>
-        </div>
-    </section>
+{% include credentials.html %}
 
 <div class="row centered btnrow">
 	<a href="/r/" class="button no_underline">view examples</a>
