--- a/_posts/python/bubble/2015-06-17-bubble-sizeref.html
+++ b/_posts/python/bubble/2015-06-17-bubble-sizeref.html
@@ -11,7 +11,7 @@ from plotly.graph_objs import *
 trace0 = Scatter(
     x = [1, 2, 3, 4],
     y = [10, 11, 12, 13],
-    text = ['A</br>size: 40</br>default', 'B</br>size: 60</br>default', 'C</br>size: 80</br>default', 'D</br>size: 100</br>default'],
+    text = ['A&lt;/br%gt;size: 40&lt;/br%gt;default', 'B&lt;/br%gt;size: 60&lt;/br%gt;default', 'C&lt;/br%gt;size: 80&lt;/br%gt;default', 'D&lt;/br%gt;size: 100&lt;/br%gt;default'],
     mode = 'markers',
     marker = Marker(
         size = [400, 600, 800, 1000],
@@ -22,7 +22,7 @@ trace0 = Scatter(
 trace1 = Scatter(
     x = [1, 2, 3, 4],
     y = [14, 15, 16, 17],
-    text = ['A</br>size: 40</br>sixeref: 0.2', 'B</br>size: 60</br>sixeref: 0.2', 'C</br>size: 80</br>sixeref: 0.2', 'D</br>size: 100</br>sixeref: 0.2'],
+    text = ['A&lt;/br%gt;size: 40&lt;/br%gt;sixeref: 0.2', 'B&lt;/br%gt;size: 60&lt;/br%gt;sixeref: 0.2', 'C&lt;/br%gt;size: 80&lt;/br%gt;sixeref: 0.2', 'D&lt;/br%gt;size: 100&lt;/br%gt;sixeref: 0.2'],
     mode = 'markers',
     marker = Marker(
         size = [400, 600, 800, 1000],
@@ -35,7 +35,7 @@ trace1 = Scatter(
 trace2 = Scatter(
     x = [1, 2, 3, 4],
     y = [20, 21, 22, 23],
-    text = ['A</br>size: 40</br>sixeref: 2', 'B</br>size: 60</br>sixeref: 2', 'C</br>size: 80</br>sixeref: 2', 'D</br>size: 100</br>sixeref: 2'],
+    text = ['A&lt;/br%gt;size: 40&lt;/br%gt;sixeref: 2', 'B&lt;/br%gt;size: 60&lt;/br%gt;sixeref: 2', 'C&lt;/br%gt;size: 80&lt;/br%gt;sixeref: 2', 'D&lt;/br%gt;size: 100&lt;/br%gt;sixeref: 2'],
     mode = 'markers',
     marker = Marker(
         size = [400, 600, 800, 1000],
