change header on 404 page to point to right css files

--- a/404.html
+++ b/404.html
@@ -4,22 +4,47 @@ title: 404 Page
 
 <!DOCTYPE html>
 <html>
-	{% include head.html %}
+  <head>
+
+  <!-- Fonts -->
+  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/fonts/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/plotly_icons.css" />
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
+
+
+  <!-- Stytlesheets -->
+  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/base.css">
+  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/layout_block.css">
+  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/modules.css">
+  <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/state.css">
+
+  <!-- JQUERY Library -->
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+  <!-- Icon -->
+  <link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
+
+  <!-- META TAGS -->
+  {% include seo.html %}
+
+  </head>
 
   <body>
-  	<div class="allcontent">
-		{% include header.html %}
+    <div class="allcontent">
+    {% include header.html %}
 
-		<div class="sectionseparator_a">
-			<div class="bigcontainer" >
-				<h1 class="centered">404 - Page not found</h1>
-				<h6 class="centered">Oops! It looks like this page doesn't exist.</br>Check the URL for errors or try refreshing the page.</h6>
-			<img alt="Plotly logo" src="{{site.staticurl}}/images/plotly-hist-logo_250w.png">
-			</div>
-		</div>
-	</div>
+    <div class="sectionseparator_a">
+      <div class="bigcontainer" >
+        <h1 class="centered">404 - Page not found</h1>
+        <h6 class="centered">Oops! It looks like this page doesn't exist.</br>Check the URL for errors or try refreshing the page.</h6>
+      <img alt="Plotly logo" src="{{site.staticurl}}/images/plotly-hist-logo_250w.png">
+      </div>
+    </div>
+  </div>
   {% include footer.html %}
-  
+
 
 
 </body>
