Revert "IDs for sub-example links"

--- a/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
@@ -13,7 +13,7 @@ has_thumbnail: false
 <h1>Plotly for IPython Notebooks</h1>
     <h2>Getting started</h2>
     <p>
-        Instructions on how to install Plotly's Python package can be found on the <a class="no_underline plot-blue" href="{{ site.baseurl }}/python/getting-started">Plotly for Python getting started page</a>.
+        Instructions on how to install Plotly's Python package can be found on the <a href="{{ site.baseurl }}/python/getting-started">Plotly for Python getting started page</a>.
     </p>
 
     <section class="section">
@@ -76,68 +76,39 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
 
     <h2 >Sample notebooks</h2>
     <ul class="no-list-style" >
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/aircraft-pitch-analysis-matlab-plotly/" >Aircraft Pitch Analysis in MATLAB and Plotly</a></li>
 
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/cufflinks/" >Cufflinks - Easy Plotting using Plotly and Pandas</a></li>
 
-      <a href="/{{page.permalink}}">
-          <div class="alltutcol">
-            <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-            <div class="titlecenter">
-                  <h5 class="centered"> {{page.name}} </h5>
-            </div>
-          </div>
-      </a>
-      <div class="{% cycle 'group 30': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+        <li><a  class="no_underline" href="https://plot.ly/ipython-notebooks/survival-analysis-r-vs-python/" >Survival Analysis with Plotly: R vs. Python</a></li>
 
-      <a href="https://plot.ly/ipython-notebooks/aircraft-pitch-analysis-matlab-plotly/">
-          <div class="alltutcol">
-            <img class="thumbnail" alt="{{page.name}}" src="{{site.staticurl}}{{page.thumbnail}}" >
-            <div class="titlecenter">
-                  <h5 class="centered"> Aircraft Pitch Analysis in MATLAB and Plotly </h5>
-            </div>
-          </div>
-      </a>
-      <div class="{% cycle 'group 30': '', '', 'three-column-clear', '', 'five-column-clear' %}"></div>
+        <li><a  class="no_underline" href="https://plot.ly/ipython-notebooks/amazon-redshift/" >Plotting Data From Your Redshift Data Warehouse</a></li>
 
+        <li><a  class="no_underline" href="https://plot.ly/ipython-notebooks/apache-spark/" >Plotting Spark DataFrames with Plotly</a></li>
 
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/principal-component-analysis/" >Principal Component Analysis in 3 Simple Steps</a></li>
 
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/big-data-analytics-with-pandas-and-sqlite/" >Big data analytics with Pandas and SQLite</a></li>
 
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/ukelectionbbg/" >Plotting GBP/USD price action around UK general elections</a></li>
 
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/salesforce/" >Interactive graphing with Salesforce</a></li>
 
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/graph-gmail-inbox-data/" >Graph Gmail inbox data with IPython notebook</a></li>
 
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/markowitz-portfolio-optimization/" >Markowitz portfolio optimization</a></li>
 
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/cartodb/" >CartoDB and Plotly</a></li>
 
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/aircraft-pitch-analysis-matlab-plotly/" >Aircraft Pitch Analysis in MATLAB and Plotly</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/cufflinks/" >Cufflinks - Easy Plotting using Plotly and Pandas</a></li>
-
-        <li><a  class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/survival-analysis-r-vs-python/" >Survival Analysis with Plotly: R vs. Python</a></li>
-
-        <li><a  class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/amazon-redshift/" >Plotting Data From Your Redshift Data Warehouse</a></li>
-
-        <li><a  class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/apache-spark/" >Plotting Spark DataFrames with Plotly</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/principal-component-analysis/" >Principal Component Analysis in 3 Simple Steps</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/big-data-analytics-with-pandas-and-sqlite/" >Big data analytics with Pandas and SQLite</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/ukelectionbbg/" >Plotting GBP/USD price action around UK general elections</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/salesforce/" >Interactive graphing with Salesforce</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/graph-gmail-inbox-data/" >Graph Gmail inbox data with IPython notebook</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/markowitz-portfolio-optimization/" >Markowitz portfolio optimization</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/cartodb/" >CartoDB and Plotly</a></li>
-
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/network-graphs/" >Network Graphs with the networkx and
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/network-graphs/" >Network Graphs with the networkx and
  plotly Python Modules</a></li>
 
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/subplots/" >Python Subplots with Plotly and make_subplots</a></li>
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/subplots/" >Python Subplots with Plotly and make_subplots</a></li>
 
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/basemap-maps/" >Plotly maps with Matplotlib Basemap</a></li>
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/basemap-maps/" >Plotly maps with Matplotlib Basemap</a></li>
 
-        <li><a class="no_underline plot-blue" href="https://plot.ly/ipython-notebooks/collaboration/" >Collaboration with Plotly using Python, R and MATLAB</a></li>
+        <li><a class="no_underline" href="https://plot.ly/ipython-notebooks/collaboration/" >Collaboration with Plotly using Python, R and MATLAB</a></li>
 
     </ul>
+</section>
+
