--- a/404.html
+++ b/404.html
@@ -38,7 +38,8 @@ permalink: /404.html
 
     <div class="sectionseparator_a">
       <div class="bigcontainer" >
-        <h1 class="centered">404 - Page not found</h1>
+        <h1 class="centered">404</h1>
+        <h2>Page not found</h2>
         <h6 class="centered">Oops! It looks like this page doesn't exist.</br>Check the URL for errors or try refreshing the page.</h6>
       <img alt="Plotly logo" src="{{site.staticurl}}/images/plotly-hist-logo_250w.png">
       </div>
