--- a/404.html
+++ b/404.html
@@ -1,3 +1,7 @@
+---
+title: 404 Page
+---
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -33,8 +37,7 @@
 
     <div class="sectionseparator_a">
       <div class="bigcontainer" >
-        <h1 class="centered">404</h1>
-        <h2>Page not found</h2>
+        <h1 class="centered">404 - Page not found</h1>
         <h6 class="centered">Oops! It looks like this page doesn't exist.</br>Check the URL for errors or try refreshing the page.</h6>
       <img alt="Plotly logo" src="{{site.staticurl}}/images/plotly-hist-logo_250w.png">
       </div>
