fix typo and fade on hover

--- a/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/python/ipython-notebooks/2015-05-25-ipython-notebooks_index.html
@@ -114,9 +114,9 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="https://plot.ly/ipython-notebooks/amazon-redshift/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotting Data From Your Redshift Data Warehouse" src="{{site.staticurl}}/images/ipython-img/9 - ipython redshift.png" >
+                        <img class="thumbnail" alt="Plotting Data from Your Redshift Data Warehouse" src="{{site.staticurl}}/images/ipython-img/9 - ipython redshift.png" >
                         <div class="titlecenter">
-                              <h5 class="centered">Plotting Data From Your Redshift Data Warehouse</h5>
+                              <h5 class="centered">Plotting Data from Your Redshift Data Warehouse</h5>
                         </div>
                       </div>
                   </a>
@@ -142,17 +142,17 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                 <div class="row">
                   <a href="/ipython-notebooks/amazon-redshift/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotting Data From Your Redshift Data Warehouse" src="{{site.staticurl}}/images/ipython-img/9 - ipython redshift.png" >
+                        <img class="thumbnail" alt="Plotting Data from Your Redshift Data Warehouse" src="{{site.staticurl}}/images/ipython-img/9 - ipython redshift.png" >
                         <div class="titlecenter">
-                              <h5 class="centered">Plotting Data From Your Redshift Data Warehouse</h5>
+                              <h5 class="centered">Plotting Data from Your Redshift Data Warehouse</h5>
                         </div>
                       </div>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/apache-spark/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Plotting Spark DataFrames with Plotly" src="{{site.staticurl}}/images/ipython-img/13 - ipython apache spark.png" >
+                        <img class="thumbnail" alt="Plotting Spark Data Frames with Plotly" src="{{site.staticurl}}/images/ipython-img/13 - ipython apache spark.png" >
                         <div class="titlecenter">
-                              <h5 class="centered">Plotting Spark DataFrames with Plotly</h5>
+                              <h5 class="centered">Plotting Spark Data Frames with Plotly</h5>
                         </div>
                       </div>
                   </a>
@@ -160,7 +160,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                       <div class="alltutcol">
                         <img class="thumbnail" alt="Big data analytics with Pandas and SQLite" src="{{site.staticurl}}/images/ipython-img/14 - ipython SQlite.png" >
                         <div class="titlecenter">
-                              <h5 class="centered">Big data analytics with Pandas and SQLite</h5>
+                              <h5 class="centered">Big Data Analytics with Pandas and SQLite</h5>
                         </div>
                       </div>
                   </a>
@@ -225,9 +225,9 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                   </a>
                   <a href="https://plot.ly/ipython-notebooks/cartodb/">
                       <div class="alltutcol">
-                        <img class="thumbnail" alt="Earthquake Magnitude withCartoDB and Plotly" src="{{site.staticurl}}/images/ipython-img/21 - ipython cartodb.png" >
+                        <img class="thumbnail" alt="Earthquake Magnitude with CartoDB and Plotly" src="{{site.staticurl}}/images/ipython-img/21 - ipython cartodb.png" >
                         <div class="titlecenter">
-                              <h5 class="centered">Earthquake Magnitude withCartoDB and Plotly</h5>
+                              <h5 class="centered">Earthquake Magnitude with CartoDB and Plotly</h5>
                         </div>
                       </div>
                   </a>
@@ -260,6 +260,7 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                       </div>
                   </a>
                 </div>
+<!--
               <h3 class="even_margin">Research and Development</h3>
                 <div class="row">
                   <a href="http://gvallver.perso.univ-pau.fr/notebook/bandDiagram.html">
@@ -271,6 +272,8 @@ tls.embed("https://plot.ly/~streaming-demos/4")</code></pre>
                       </div>
                   </a>
                 </div>
+-->
+
               <h3 class="even_margin">Plotly and matplotlib</h3>
                 <div class="row">
                   <a href="/python/matplotlib-to-plotly-tutorial/">
